[package]
name = "dnsmaster"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
env_logger = "0.11"
clap = { version = "4.2", features = ["cargo"] }
reqwest = { version = "0.12", features = ["blocking", "json"] }
tokio = { version = "1", features = ["full"] }
anyhow = "1.0.70"
serde_json = "1.0"
openprovider = "0.1"
